rgw: fix rgw versioned bucket stat accounting during reshard and check index

Fixes: https://tracker.ceph.com/issues/62760
Signed-off-by: Cory Snyder <csnyder@1111systems.com>
(cherry picked from commit 152aadb71b61c53a4832a1c8cf82fce3d64b68d1)

Conflicts:
    Re-arranged source code files.
	src/cls/rgw/cls_rgw.cc
	src/cls/rgw/cls_rgw_types.cc

Resolves: rhbz#2167318